# Ticketmaster

./: .fzfignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yaml  justfile  pyproject.toml
.claude/commands/: commit.md
.claude/skills/reference/: SKILL.md
.claude/skills/sqlmodel/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/testing/references/: mocks.md
.claude/skills/version/: SKILL.md
.github/workflows/: called-deploy-container-service.yaml  on-pull-request.yaml  on-push-test.yaml
src/hello/: .dockerignore  Dockerfile  pyproject.toml  service.yaml
src/hello/hello/: main.py
src/libs/: pyproject.toml
src/libs/libs/alembic_ext/: env_helpers.py
src/libs/libs/common/: enums.py
src/libs/libs/common/schemas/: dto.py
src/libs/libs/fastapi_ext/middlewares/: __init__.py  request_response_logging.py
src/libs/libs/fastapi_ext/schemas/: base_schemas.py
src/libs/libs/logging/: __init__.py  config.py  enums.py  formatters.py
src/libs/libs/settings/: __init__.py  base_settings.py
src/libs/libs/sqlmodel_ext/: __init__.py  session.py  types.py  utils.py
src/libs/libs/tests/fastapi_ext/middlewares/: test_request_body_limit.py  test_request_id.py  test_request_response_logging.py  test_security_headers.py  test_unhandled_exception.py
src/libs/libs/tests_ext/: factories.py  sqlmodel_fixtures.py
src/ticketmaster/: alembic.ini  pyproject.toml
src/ticketmaster/migrations/: env.py  script.py.mako
src/ticketmaster/migrations/versions/contract/: 20260416171611_initial_contract_branch.py
src/ticketmaster/migrations/versions/expand/: 20260416171611_initial_expand_branch.py  20260416172424_initial_schema.py
src/ticketmaster/ticketmaster/: enums.py  models.py  repositories.py  serializers.py  settings.py  utils.py
src/ticketmaster/ticketmaster/http/: main.py
src/ticketmaster/ticketmaster/http/v1/: __init__.py  routes.py
src/ticketmaster/ticketmaster/http/v1/schemas/: response_schemas.py
src/ticketmaster/ticketmaster/schemas/: dtos.py
src/ticketmaster/ticketmaster/tests/: conftest.py  factories.py  test_hello.py
src/ticketmaster/ticketmaster/tests/http/v1/: test_routes.py
