[tool.poetry]
name = "ticketmaster"
version = "0.0.1"
description = ""
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
package-mode = false

[build-system]
requires = ["poetry-core"]

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.10"
pre-commit = "^4.5.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ipython = "^8.0.0"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["src/tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["E722", "B904", "B006", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["E501"]
"**/__init__.py" = ["F401"]
