[tool.poetry]
name = "ticketmaster"
version = "0.1.1"
description = "Ticketmaster monolith service"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "ticketmaster" }]

[tool.poetry.dependencies]
python = "^3.14"
ticketmaster-libs = "^0.1.0"
ruff = "^0.15.10"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
fastapi = {extras = ["standard"], version = "^0.136.0"}
uvicorn = "^0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib"
testpaths = ["ticketmaster/tests"]
